{
API health: HTTP 200
---
[eval]:1
const WebSocket = require('ws'); const ws = new WebSocket('ws://localhost:8787/api/ws/chat?session=test123'); ws.on('open', () = console.log('WS CONNECTED'); ws.send(JSON.stringify({type:'ping'})); }); ws.on('message', (d) = console.log('WS MSG:', d.toString()); }); ws.on('close', (c) = console.log('WS CLOSED:', c); }); ws.on('error', (e) = console.log('WS ERROR:', e.message); }); setTimeout(() = console.log('TIMEOUT - exiting'); process.exit(0); }, 4000);
                                                                                                                             ^

SyntaxError: Unexpected token ')'
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.20.2
